// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests different variations of <AdvisoryComponent> Renders AdvisoryComponent with a numerical room 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#ffffff",
        "justifyContent": "center",
        "paddingBottom": 10,
        "paddingLeft": 10,
        "paddingRight": 10,
        "paddingTop": 10,
        "width": "100%",
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
          "flexWrap": "nowrap",
          "justifyContent": "space-between",
        },
      ]
    }
  >
    <Text
      ellipsizeMode="middle"
      numberOfLines={1}
      style={
        Array [
          Object {
            "color": "#444444",
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
            "fontSize": 25,
            "fontWeight": "bold",
            "textAlign": "left",
          },
        ]
      }
    >
      Advisory
    </Text>
    <View
      flex={false}
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "flex-end",
          },
        ]
      }
    >
      <Text
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#808080",
              "paddingLeft": 5,
              "textAlign": "right",
            },
          ]
        }
      >
        11:00
         - 
        11:30 PM
      </Text>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
          "flexWrap": "nowrap",
          "justifyContent": "space-between",
          "marginTop": 5,
        },
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "color": "#808080",
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
            "textAlign": "left",
          },
        ]
      }
    >
      Mr. Teacher Man
    </Text>
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "color": "#808080",
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
            "textAlign": "right",
          },
        ]
      }
    >
      Room 132
    </Text>
  </View>
</View>
`;

exports[`Tests different variations of <AdvisoryComponent> Renders AdvisoryComponent with a string room 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#ffffff",
        "justifyContent": "center",
        "paddingBottom": 10,
        "paddingLeft": 10,
        "paddingRight": 10,
        "paddingTop": 10,
        "width": "100%",
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
          "flexWrap": "nowrap",
          "justifyContent": "space-between",
        },
      ]
    }
  >
    <Text
      ellipsizeMode="middle"
      numberOfLines={1}
      style={
        Array [
          Object {
            "color": "#444444",
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
            "fontSize": 25,
            "fontWeight": "bold",
            "textAlign": "left",
          },
        ]
      }
    >
      Advisory
    </Text>
    <View
      flex={false}
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "flex-end",
          },
        ]
      }
    >
      <Text
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#808080",
              "paddingLeft": 5,
              "textAlign": "right",
            },
          ]
        }
      >
        9:38
         - 
        9:46 AM
      </Text>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
          "flexWrap": "nowrap",
          "justifyContent": "space-between",
          "marginTop": 5,
        },
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "color": "#808080",
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
            "textAlign": "left",
          },
        ]
      }
    >
      Mr. Teacher Man
    </Text>
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "color": "#808080",
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
            "textAlign": "right",
          },
        ]
      }
    >
      Office
    </Text>
  </View>
</View>
`;
